[package]
name = "hank-types"
description = "Generated type definitions for Hank"
license = "MIT"
homepage = "https://hank.chat"
repository = "https://github.com/hankchat/hank-rust-types"
readme = "README.md"
keywords = ["hank", "chat", "bot", "chatbot"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13.2"

[build-dependencies]
prost-build = "0.13.2"
